# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs
tests/: health_check.rs
